<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:background="@color/cardViewBg"
    app:cardCornerRadius="0dp"
    app:cardElevation="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/cardViewBg"
        >

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_wind_title"
            style="@style/CustomNowWeatherTitleTextAppearance"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical"
            android:background="#64cc9e"
            android:drawableLeft="@mipmap/windy_condition"
            android:drawablePadding="15dp"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"
            android:text="@string/wind_condition" />

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_wind_title"
            android:paddingBottom="20dp"
            android:paddingTop="20dp">

            <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <android.support.v7.widget.AppCompatTextView
                    style="@style/CustomNowWeatherContentTextAppearance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/wind_sc" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/tv_wind_sc"
                    style="@style/CustomNowWeatherContentTextAppearance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="15dp"
                    tools:text="4-5级" />

            </android.support.v7.widget.LinearLayoutCompat>

            <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <android.support.v7.widget.AppCompatTextView
                    style="@style/CustomNowWeatherContentTextAppearance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/wind_dir" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/tv_wind_dir"
                    style="@style/CustomNowWeatherContentTextAppearance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="15dp"
                    tools:text="西北风" />

            </android.support.v7.widget.LinearLayoutCompat>

            <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <android.support.v7.widget.AppCompatTextView
                    style="@style/CustomNowWeatherContentTextAppearance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/wind_spd" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/tv_wind_spd"
                    style="@style/CustomNowWeatherContentTextAppearance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="15dp"
                    tools:text="18Km" />

            </android.support.v7.widget.LinearLayoutCompat>

        </android.support.v7.widget.LinearLayoutCompat>

    </RelativeLayout>

</android.support.v7.widget.CardView>